fix: fixed swagger bugs
