# docs/swagger.json
@@ -9,11 +9,11 @@
     "host": "localhost:8001",
     "basePath": "/",
     "paths": {
-        "/api/items/:id": {
+        "/api/items/{id}": {
             "get": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "return item by ID of current user",
@@ -25,6 +25,15 @@
                 ],
                 "summary": "Get TODO Items By ID",
                 "operationId": "get-todo-item-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -61,7 +70,7 @@
             "put": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "update item by ID of current user",
@@ -82,6 +91,13 @@
                         "schema": {
                             "$ref": "#/definitions/todoapp.UpdateItemInput"
                         }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -120,7 +136,7 @@
             "delete": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "delete item by ID of current user",
@@ -132,6 +148,15 @@
                 ],
                 "summary": "Delete TODO Items By ID",
                 "operationId": "delete-todo-item",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "status",
@@ -167,6 +192,54 @@
             }
         },
         "/api/lists": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "return all TODO lists of current user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lists"
+                ],
+                "summary": "Get All TODO Lists",
+                "operationId": "get-all-lists",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.getAllListsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -197,8 +270,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "type": "integer"
                         }
@@ -230,11 +303,79 @@
                 }
             }
         },
-        "/api/lists/:id": {
+        "/api/lists/{id}/items": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "will create new item in list of current user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "items"
+                ],
+                "summary": "Create TODO Item",
+                "operationId": "create-todo-item",
+                "parameters": [
+                    {
+                        "description": "item info",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/todoapp.TodoItem"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "id",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/handler.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/lists/{list_id}": {
             "get": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Get TODO List By choosen ID",
@@ -246,6 +387,15 @@
                 ],
                 "summary": "Get TODO List By ID",
                 "operationId": "get-list-by-id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "list_id",
+                        "name": "list_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -297,6 +447,24 @@
                 ],
                 "summary": "Update TODO List",
                 "operationId": "update-list",
+                "parameters": [
+                    {
+                        "description": "update_info",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/todoapp.UpdateListInput"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "list_id",
+                        "name": "list_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "status",
@@ -333,7 +501,7 @@
             "delete": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Delete TODO List",
@@ -345,6 +513,15 @@
                 ],
                 "summary": "Delete TODO List",
                 "operationId": "delete-todo-list",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "list_id",
+                        "name": "list_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "status",
@@ -379,11 +556,11 @@
                 }
             }
         },
-        "/api/lists/:id/items": {
+        "/api/lists/{list_id}/items": {
             "get": {
                 "security": [
                     {
-                        "apiKeyAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "return all items from choosen list of current user",
@@ -395,70 +572,20 @@
                 ],
                 "summary": "Get All TODO Items",
                 "operationId": "get-all-todo-items",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "list_id",
+                        "name": "list_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handler.getAllItemsResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/handler.errorResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "apiKeyAuth": []
-                    }
-                ],
-                "description": "will create new item in list of current user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "items"
-                ],
-                "summary": "Create TODO Item",
-                "operationId": "create-todo-item",
-                "parameters": [
-                    {
-                        "description": "item info",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/todoapp.TodoItem"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "id",
-                        "schema": {
-                            "type": "string"
                         }
                     },
                     "400": {
@@ -514,7 +641,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "token",
+                        "description": "someToken",
                         "schema": {
                             "type": "string"
                         }
@@ -625,6 +752,17 @@
                 }
             }
         },
+        "handler.getAllListsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/todoapp.TodoList"
+                    }
+                }
+            }
+        },
         "handler.signInInput": {
             "type": "object",
             "required": [
@@ -685,6 +823,17 @@
                 },
                 "done": {
                     "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "todoapp.UpdateListInput": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
