# pkg/handler/item.go
@@ -9,18 +9,19 @@ import (
 )
 
 // @Summary Create TODO Item
-// @Security apiKeyAuth
+// @Security ApiKeyAuth
 // @Description will create new item in list of current user
 // @ID create-todo-item
 // @Tags items
 // @Accepted json
 // @Produce json
 // @Param payload body todoapp.TodoItem true "item info"
-// @Success 200 {string} string "id"
+// @Param id path int true "id"
+// @Success 201 {string} string "id"
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/lists/:id/items [post]
+// @Router /api/lists/{id}/items [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -45,7 +46,7 @@ func (h *Handler) createItem(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
+	c.JSON(http.StatusCreated, map[string]interface{}{
 		"id": id,
 	})
 
@@ -56,17 +57,18 @@ type getAllItemsResponse struct {
 }
 
 // @Summary Get All TODO Items
-// @Security apiKeyAuth
+// @Security ApiKeyAuth
 // @Description return all items from choosen list of current user
 // @ID get-all-todo-items
 // @Tags items
 // @Accepted json
 // @Produce json
+// @Param list_id path int true "list_id"
 // @Success 200 {object} handler.getAllItemsResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/lists/:id/items [get]
+// @Router /api/lists/{list_id}/items [get]
 func (h *Handler) getAllItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -91,17 +93,18 @@ func (h *Handler) getAllItem(c *gin.Context) {
 }
 
 // @Summary Get TODO Items By ID
-// @Security apiKeyAuth
+// @Security ApiKeyAuth
 // @Description return item by ID of current user
 // @ID get-todo-item-by-id
 // @Tags items
 // @Accepted json
 // @Produce json
+// @Param id path int true "id"
 // @Success 200 {object} todoapp.TodoItem
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/items/:id [get]
+// @Router /api/items/{id} [get]
 func (h *Handler) getItemById(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -124,19 +127,19 @@ func (h *Handler) getItemById(c *gin.Context) {
 }
 
 // @Summary Update TODO Items By ID
-// @Security apiKeyAuth
+// @Security ApiKeyAuth
 // @Description update item by ID of current user
 // @ID update-todo-item
 // @Tags items
 // @Accepted json
 // @Produce json
-// Param q query string true "name search by id"
 // @Param payload body todoapp.UpdateItemInput true "updated item info"
+// @Param id path int true "id"
 // @Success 200 {string} string "status"
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/items/:id [put]
+// @Router /api/items/{id} [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
@@ -166,17 +169,18 @@ func (h *Handler) updateItem(c *gin.Context) {
 }
 
 // @Summary Delete TODO Items By ID
-// @Security apiKeyAuth
+// @Security ApiKeyAuth
 // @Description delete item by ID of current user
 // @ID delete-todo-item
 // @Tags items
 // @Accepted json
 // @Produce json
+// @Param id path int true "id"
 // @Success 200 {string} string "status"
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
-// @Router /api/items/:id [delete]
+// @Router /api/items/{id} [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	userId, err := getUserId(c)
 	if err != nil {
